--- a/css/styles.css
+++ b/css/styles.css
@@ -10,129 +10,123 @@
 /* Body */
 
 body {
-    width: 1600px;
 
-    color: var(--primary-text-color);
-    font-family: Roboto, sans-serif;
-    letter-spacing: 0.03em;
+color: var(--primary-text-color);
+font-family: Roboto, sans-serif;
+letter-spacing: 0.03em;
 }
 
-/* Lists styles  */
+/* Common styles  */
 
 h1, h2, h3, h4, h5, h6, ul, p {
 margin: 0;
 }
 
 .list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+list-style: none;
+padding: 0;
+margin: 0;
 } 
 
 .image {
-    display: block;
+display: block;
 }
 
 .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+padding-top: 94px;
+padding-bottom: 94px;
 }
 
 .link {
-    text-decoration: none;
+text-decoration: none;
 }
 
-
-
 .container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+width: 1200px;
+padding-left: 15px;
+padding-right: 15px;
+margin-left: auto;
+margin-right: auto;
 }
 
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
+position: absolute;
+width: 1px;
+height: 1px;
+margin: -1px;
+border: 0;
+padding: 0;
 
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+white-space: nowrap;
+clip-path: inset(100%);
+clip: rect(0 0 0 0);
+overflow: hidden;
 }
 
 /* Headder */
 
 .page-headder {
-    background-color: var(--background-header);
-    border-bottom: 1px solid #ECECEC;
+background-color: var(--background-header);
+border-bottom: 1px solid #ECECEC;
 }
 
 .headder {
-    display: flex;
-    align-items: center;
+display: flex;
+align-items: center;
 }
 
 .navigation {
-    display: flex;
-    align-items: center;
+display: flex;
+align-items: center;
 }
 
 /* Logo */
 
 .logo {
-    margin-right: 93px;
-    width: 145px;
-    padding-top: 24px;
-    padding-bottom: 25px;
+margin-right: 93px;
+width: 145px;
+padding-top: 24px;
+padding-bottom: 25px;
 }
 
 .logo-web {
-    color: #2196F3;
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19;
+color: #2196F3;
+font-family: Raleway, sans-serif;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.19;
 }
 
 .logo-studio-headder {
-    color:#000000;
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19;
-    
+color:#000000;
+font-family: Raleway, sans-serif;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.19;   
 }
 
 /* Site-nav */
 
 .site-nav {
-    display: flex;
-    padding-left: 0px;
+display: flex;
+padding-left: 0px;
 }
-
 
 .site-nav-link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    color:#212121;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
+display: block;
+padding-top: 32px;
+padding-bottom: 32px;
+    
+color:#212121;
+font-weight: 500;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.02em;
 }
-
 
 .site-nav .item:not(:last-child) {
     margin-right: 50px;
 }
-
 
 .site-nav-link:hover,
 .site-nav-link:focus {
@@ -142,13 +136,12 @@ margin: 0;
 /* Contacts */
 
 .contacts { 
-    display: flex;
-    margin-left: auto;
+display: flex;
+margin-left: auto;
 }
 
 .contacts .item:not(:last-child){
-    margin-right: 50px;
-
+margin-right: 50px;
 }
 
 .contacts-link {
@@ -156,25 +149,25 @@ display: block;
 padding-top: 32px;
 padding-bottom: 32px;
 
-    color: var(--primary-text-color);
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
+color: var(--primary-text-color);
+font-weight: 500;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.02em;
 }
 
 .contacts-link:hover:hover,
 .contacts-link:focus:focus {
-    color: var(--accent-color);
+color: var(--accent-color);
 }
 
 /* Hero */
 
 .hero {
-    padding-top: 200px;
-    padding-bottom: 200px;
+padding-top: 200px;
+padding-bottom: 200px;
 
-    background-color: #2F303A;
+background-color: #2F303A;
 }
 
 .hero-title {
@@ -183,18 +176,18 @@ margin-left: auto;
 margin-right: auto;
 margin-bottom: 30px;
 
-    color:#FFFFFF;
-        font-weight: 900;
-        font-size: 44px;
-        line-height: 1.36;
-        text-align: center;
-        letter-spacing: 0.06em;
-        text-transform: uppercase;
+color:#FFFFFF;
+font-weight: 900;
+font-size: 44px;
+line-height: 1.36;
+text-align: center;
+letter-spacing: 0.06em;
+text-transform: uppercase;
 }
 
 .hero .button {
-    display: block;
-    width: 200px;
+display: block;
+width: 200px;
 margin: 0 auto;
 padding-top: 10px;
 padding-bottom: 10px;
@@ -203,15 +196,16 @@ cursor: pointer;
 color: #FFFFFF;
 background-color: #2196F3;  
 font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.88;
+letter-spacing: 0.06em;
 }
 
 /* Advantages */
+
 .advantage-section .item {
-    flex-basis: 270px;
+flex-basis: 270px;
 }
 
 .advantage-section .item:not(:last-child) {
@@ -219,29 +213,28 @@ margin-right: 30px;
 }
 
 .advantage-section .list {
-    display: flex;
+display: flex;
 }
 
 .advantage-section .list-item-title {
-    padding-left: 0;
-    margin-bottom: 10px;
+padding-left: 0;
+margin-bottom: 10px;
 
-    color: var(--title-text-color);
-        font-size: 14px;
-        line-height: 1.14;
-        text-transform: uppercase;
+color: var(--title-text-color);
+font-size: 14px;
+line-height: 1.14;
+text-transform: uppercase;
 }
 
 .advantage-section .list-item-text {
-        font-size: 14px;
-        line-height: 1.71;
+font-size: 14px;
+line-height: 1.71;
 }
 /* Work */
+
 .work-section .list {
-    display: flex;
-    justify-content: center;
-    padding-left: 0px;
-    padding-right: 0px;
+display: flex;
+justify-content: center;
 }
 
 .work-section .item {
@@ -254,21 +247,21 @@ margin-left: auto;
 margin-right: auto;
 margin-bottom: 50px;
 
-    color: var(--title-text-color);
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
+color: var(--title-text-color);
+font-size: 36px;
+line-height: 1.17;
+text-align: center;
 }
 
 .work-section .item:not(:last-child){
-    margin-right: 30px;
+margin-right: 30px;
 }
 
 /* Our team */
 
 .team-section .team-list {
-    display: flex;
-    justify-content: center;
+display: flex;
+justify-content: center;
 }
 
 .team-section .item:not(:last-child) {
@@ -276,7 +269,7 @@ margin-bottom: 50px;
 }
 
 .team-section .item {
-    flex-basis: 270px;
+flex-basis: 270px;
 }
 
 .team-section {
@@ -284,93 +277,95 @@ background-color: #F5F4FA;
 }
 
 .team-section .title {
-    width: 264px;
-    margin-bottom: 50px;
-    margin-left: auto;
-        margin-right: auto;
+width: 264px;
+margin-bottom: 50px;
+margin-left: auto;
+margin-right: auto;
 
 color: var(--title-text-color);
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
+font-size: 36px;
+line-height: 1.17;
+text-align: center;
 }
 
 .team-section .list-title {
-    margin-bottom: 10px;
+margin-bottom: 10px;
 
-    color: var(--title-text-color);
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.19; 
+color: var(--title-text-color);
+font-weight: 500;
+font-size: 16px;
+line-height: 1.19; 
 }
 
 .team-section .list-title-text {
-        font-size: 16px;
-        line-height: 1.19;
-    }
+font-size: 16px;
+line-height: 1.19;
+}
 
 .team-section .card-content {
-    width: 270px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 15px;
-    padding-right: 15px;
-    text-align: center;
+width: 270px;
+padding-top: 30px;
+padding-bottom: 30px;
+padding-left: 15px;
+padding-right: 15px;
+text-align: center;
 
-    background-color: #FFFFFF;
+background-color: #FFFFFF;
 }    
 
   /* Footer */
 
 .footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
+padding-top: 60px;
+padding-bottom: 60px;
 
-    background-color: var(--background-footer);
+background-color: var(--background-footer);
 }
 
 .logo-footer {
-    margin-bottom: 20px;
+margin-bottom: 20px;
 }
 
 .logo-studio-footer {
-    color: #FFFFFF;
-    font-family: Raleway, sans-serif;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19
+color: #FFFFFF;
+font-family: Raleway, sans-serif;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.19
 }
+
 .address-link {
 color: #FFFFFF;
-    font-style: normal;
-    font-size: 14px;
-    line-height: 1.71px; 
+font-style: normal;
+font-size: 14px;
+line-height: 1.71px; 
 } 
+
 .mail-link {
-    color: rgba(255, 255, 255, 0.6);
-    font-style: normal;
-        font-size: 14px;
-        line-height: 1.71;     
+color: rgba(255, 255, 255, 0.6);
+font-style: normal;
+font-size: 14px;
+line-height: 1.71;     
 }
 
 .phone-link {
-    color:rgba(255, 255, 255, 0.6);
-    font-style: normal;
-            font-size: 14px;
-            line-height: 1.71;
+color:rgba(255, 255, 255, 0.6);
+font-style: normal;
+font-size: 14px;
+line-height: 1.71;
 }
 
 .mail-link:hover,
 .mail-link:focus,
 .phone-link:hover,
 .phone-link:focus {
-    color: var(--accent-color);
+color: var(--accent-color);
 }
+
 /* Styles portfolio.html */
 
  /* Work examples section */
   /* Filters */
-
 
 .examples-section .list-button {
 display: flex;
@@ -381,68 +376,68 @@ margin-bottom: 34px;
 
 .examples-section .examples-list {
 display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
-    justify-content: center;  
+flex-wrap: wrap;
+margin-left: -30px;
+margin-top: -30px;
+justify-content: center;  
 }
 
 .examples-list > .list-item {
-    flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
-    margin-top: 30px;
+flex-basis: calc(100% / 3 - 30px);
+margin-left: 30px;
+margin-top: 30px;
 }
 
 .examples-section .button {
-    padding: 6px 22px;
-    border-radius: 4px;
+padding: 6px 22px;
+border-radius: 4px;
 
-    cursor: pointer;
-    background-color: #F5F4FA;
-    color: #212121;
-    font-family: inherit;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.62;
+cursor: pointer;
+background-color: #F5F4FA;
+color: #212121;
+font-family: inherit;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
 }
 
 .examples-section .item:not(:last-child) {
-    margin-right: 8px;
+margin-right: 8px;
 }
+
 .examples-section .button:hover,
 .examples-section .button:focus {
-    background-color: var(--accent-color);
-    color: #FFFFFF;
+background-color: var(--accent-color);
+color: #FFFFFF;
 }
 
 /* Work examples */
 
 .examples-list .title {
-    margin-bottom: 4px;
+margin-bottom: 4px;
 
-    color: var(--title-text-color);
-        font-size: 18px;
+color: var(--title-text-color);
+font-size: 18px;
         line-height: 2;
         letter-spacing: 0.06em; 
 }
 
 .examples-list .text {
-    color: var(--primary-text-color);
-        font-size: 16px;
-        line-height: 1.88;
-
+color: var(--primary-text-color);
+font-size: 16px;
+line-height: 1.88;
 }
 
 .examples-list .card-content {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 24px;
-    padding-right: 24px;
+padding-top: 20px;
+padding-bottom: 20px;
+padding-left: 24px;
+padding-right: 24px;
 border-right: 1px solid #EEEEEE; 
 border-left: 1px solid #EEEEEE;;  
 border-bottom: 1px solid #EEEEEE;
 }
 
 .current {
-    color: var(--accent-color);
+color: var(--accent-color);
 }
